--- a/MoviePlus Front/registration.html
+++ b/MoviePlus Front/registration.html
@@ -5,36 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Registration</title>
-    
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-      <div class="container">
-        <a class="navbar-brand text-white mx-auto" href="#">MOVIE PLUS</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      </div>
-    </nav>
+        <div class="container">
+          <a class="navbar-brand text-white mx-auto" href="#">MOVIE PLUS</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        </div>
+      </nav>
       <div class="container mt-5">
         <div class="row">
             <div class="col-6 offset-3 mt-5">
-                <h2>Login form:</h2>
+                <h2>Registration form:</h2>
                 <form>
                     <div class="form-group">
+                        <label for="firstname">First Name</label>
+                          <input type="text" class="form-control" id="firstname" aria-describedby="emailHelp" placeholder="Enter First">                          
+                      </div>
+                      <div class="form-group">
+                        <label for="lastname">Last Name</label>
+                          <input type="text" class="form-control" id="lastname" aria-describedby="emailHelp" placeholder="Enter Last">                          
+                      </div>
+                      <div class="form-group">
+                        <label for="email">Email</label>
+                          <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter Email">                          
+                      </div>
+                    <div class="form-group">
                       <label for="username">Username</label>
-                        <input type="email" class="form-control" id="username" aria-describedby="emailHelp" placeholder="Enter username">                          
+                        <input type="text" class="form-control" id="username" aria-describedby="emailHelp" placeholder="Enter username">                          
                     </div>
                     <div class="form-group">
                       <label for="password">Password</label>
                         <input type="password" class="form-control" id="password" placeholder="Password">
                     </div>
                     <div class="form-group">
-                        <a href="/registration.html">Register</a>
+                        <p>If you have an account go to <a href="/index.html">Login</a></p>
                     </div>
-                    <button type="submit" class="login-submit btn btn-primary">Log in</button>
+                    <button type="submit" class="login-submit btn btn-primary">Register</button>
                 </form>
             </div>
         </div>
@@ -43,29 +55,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 <script>
-    $('.login-submit').on('click', function(e) {
-        e.preventDefault();
-        var username = $('#username').val();
-        var password = $("#password").val();
-
-        $.ajax({
-            method: "POST",
-            url: "http://localhost:5101/api/login",
-            //Mora da se definise contentType kako bi server podrzao JSON 
-            contentType: "application/json; charset=utf-8",
-            dataType: 'JSON',
-            data: {
-                username: username,
-                password: password
-            },
-            success: function(data) {
-              console.log(data);
-            },
-            error: function(xhr, status, error) {
-              alert(xhr.status);
-            }
-        });
-    });
 </script>
   </body>
 </html>
