--- a/MoviePlus Front/dashboard.html
+++ b/MoviePlus Front/dashboard.html
@@ -25,10 +25,7 @@
             <a class="nav-link" href="/profile.html">Profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/insert.html">Insert Movie</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Update Movie</a>
+            <a class="nav-link" href="/insert.html">Admin Panel</a>
           </li>
         </ul>
       </div>
@@ -41,10 +38,15 @@
           <h2 class="text-center">Movies</h2>
         </div>
       </div>
+      <div class="row">
+        <div class="col-4 d-flex">
+          <p class="my-auto pr-4">Search:</p><input type="text" class="form-control" id="name" onkeyup="filterByName()">
+        </div>  
+      </div>
       <div class="row mt-5 text-center">
         <div class="col-2 ">
           <span>Per Page:</span>
-          <select id="perPage" class="form-control">
+          <select id="perPage" class="form-control"  onchange="callApi()">
             <option value="2" selected>2</option>
             <option value="5">5</option>
             <option value="10">10</option>
@@ -58,63 +60,12 @@
       <div class="row">
         <div class="col-12">
            <div class="row">
-             <div class="col-12 my-3 d-flex rounded">
-               <div class="col-3">
-                <img class="img-fluid my-4" src="images/blue-profile-image.jpg" alt="Movie image">
-               </div>
-               <div class="col-9 my-auto single-movie">
-                 <h5><b>Title</b>: Title 1</h5>
-                 <p><b>Descripiton:</b> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae animi quos sequi molestias laudantium similique placeat. Rerum veritatis doloremque sunt officiis, eos omnis architecto iure quod corrupti excepturi blanditiis debitis.</p>
-                 <p><b>Duration</b>: 100</p>
-                 <p><b>Auditorium</b>: 1</p>
-                 <p><b>Number of available tickets</b>: 5</p>
-                 <button class="btn btn-primary">Buy Ticket</button>
-                </div>
-             </div>
-             
-             <div class="col-12 my-3 d-flex rounded">
-              <div class="col-3">
-               <img class="img-fluid my-4" src="images/blue-profile-image.jpg" alt="Movie image">
-              </div>
-              <div class="col-9 my-auto single-movie">
-                <h5><b>Title</b>: Title 2</h5>
-                <p><b>Descripiton:</b> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae animi quos sequi molestias laudantium similique placeat. Rerum veritatis doloremque sunt officiis, eos omnis architecto iure quod corrupti excepturi blanditiis debitis.</p>
-                <p><b>Duration</b>: 100</p>
-                <p><b>Auditorium</b>: 2</p>
-                <p><b>Number of available tickets</b>: 5</p>
-                <button class="btn btn-primary">Buy Ticket</button>
-               </div>
-            </div>
+            <div class="movies"></div>
            </div>
            <strong class="h4">Total Items:</strong> <span id="total"></span>
         </div>
       </div>
     </div>
-
-  
-      <!-- <div class="container">
-      </br></br></br></br>
-      <div class="col-md-2">
-
-        <input type="text" class="form-control" id="name" onkeyup="filterByName()">
-        <br>
-
-        <select id="perPage" class="form-control" onchange="callApi()">
-          <option value="2" selected>2</option>
-          <option value="5">5</option>
-          <option value="10">10</option>
-        </select>
-      </div>
-      <br>
-        <table class="table table-striped table-condensed table-bordered table-hover">
-            <thead><tr><th>Id</th><th>Name</th></tr></thead>
-            <tbody id="body">
-
-            </tbody>
-        </table>
-        Total Items: <span id="total"></span>
-  
-      </div> -->
 
       <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
