--- a/MoviePlus Front/profile.html
+++ b/MoviePlus Front/profile.html
@@ -25,10 +25,7 @@
             <a class="nav-link" href="/profile.html">Profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/insert.html">Insert Movie</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Update Movie</a>
+            <a class="nav-link" href="/insert.html">Admin Panel</a>
           </li>
         </ul>
       </div>
