--- a/MoviePlus Front/dashboard.html
+++ b/MoviePlus Front/dashboard.html
@@ -29,6 +29,7 @@
           </li>
         </ul>
       </div>
+        <a href="#" class="log-out text-white">Log out</a>
       </div>
     </nav>
 
@@ -55,6 +56,23 @@
         <div class="col-2">
           <span>Date:</span>
           <input type="date" id="date" name="date">
+        </div>
+        <div class="col-2">
+          <span>Time:</span>
+          <select id="perPage" class="form-control">
+            <option value="2" selected>15:00</option>
+            <option value="5">17:00</option>
+            <option value="10">20:00</option>
+          </select>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 ">
+          <ul class="list-group list-group-horizontal justify-content-center">
+            <li class="list-group-item">1</li>
+            <li class="list-group-item">2</li>
+            <li class="list-group-item">3</li>
+          </ul>
         </div>
       </div>
       <div class="row">
