--- a/MoviePlus Front/insert.html
+++ b/MoviePlus Front/insert.html
@@ -25,13 +25,11 @@
                 <a class="nav-link" href="/profile.html">Profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/insert.html">Insert Movie</a>
+                <a class="nav-link" href="/insert.html">Admin Panel</a>
               </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Update Movie</a>
-          </li>
         </ul>
       </div>
+      <a href="#" class="log-out text-white">Log out</a>
       </div>
     </nav>
 
