--- a/MoviePlus Front/profile.html
+++ b/MoviePlus Front/profile.html
@@ -29,6 +29,7 @@
           </li>
         </ul>
       </div>
+      <a href="#" class="log-out text-white">Log out</a>
       </div>
     </nav>
 
@@ -59,6 +60,7 @@
                  <p><b>Auditorium</b>: 1</p>
                  <p><b>Row</b>: 5</p>
                  <p><b>Seat number</b>: 2</p>
+                 <button class="btn btn-primary">Cancel</button>
                 </div>
              </div>
             
