--- a/MoviePlus Front/dashboard.html
+++ b/MoviePlus Front/dashboard.html
@@ -66,20 +66,17 @@
           </select>
         </div>
       </div>
-      <div class="row">
-        <div class="col-12 ">
-          <ul class="list-group list-group-horizontal justify-content-center">
-            <li class="list-group-item">1</li>
-            <li class="list-group-item">2</li>
-            <li class="list-group-item">3</li>
-          </ul>
-        </div>
-      </div>
+
       <div class="row">
         <div class="col-12">
            <div class="row">
             <div class="movies"></div>
            </div>
+
+            <div class="col-12 ">
+              <div class="pages"></div>
+            </div>
+          
            <strong class="h4">Total Items:</strong> <span id="total"></span>
         </div>
       </div>
