--- a/MoviePlus Front/dashboard.html
+++ b/MoviePlus Front/dashboard.html
@@ -25,7 +25,7 @@
             <a class="nav-link" href="/profile.html">Profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/insert.html">Admin Panel</a>
+            <a class="nav-link admin-panel" href="/insert.html">Admin Panel</a>
           </li>
         </ul>
       </div>
