--- a/MoviePlus Front/dashboard.html
+++ b/MoviePlus Front/dashboard.html
@@ -71,6 +71,7 @@
         <div class="col-12">
            <div class="row">
             <div class="movies"></div>
+            <p class="mx-auto">Current Page: <span class="current"></span></p>
            </div>
 
             <div class="col-12 ">
