--- a/MoviePlus Front/insertMovie.html
+++ b/MoviePlus Front/insertMovie.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="form-group">
                       <label for="duration">Duration(in minutes)</label>
-                        <input type="number" class="form-control" id="duration" placeholder="Enter Duration">                          
+                        <input type="number" class="form-control" id="duration" placeholder="Enter Duration" value="0">                          
                     </div>
                     <div class="form-group">
                       <label for="image">Upload image</label><br>
@@ -74,9 +74,19 @@
                         </div> 
                         </div>                   
                     </div>
+                    <div class="form-group">
+                      <div class="col-4 pl-0">
+                        <span>Auditorium:</span>
+                        <select id="auditorium" class="form-control">
+                          <option value="1" selected>Auditorium 1</option>
+                          <option value="2">Auditorium 2</option>
+                        </select> 
+                      </div>    
+                      <p class="text-info">* Screening time and Auditorium must be unique in database, if not server will return status code 500</p>        
+                    </div>
                     <button type="submit" class="movie-submit btn btn-primary">Submit</button>
                 </form>
-                <div class="errors alert alert-danger"></div>
+                <div class="errors alert alert-danger mt-3"></div>
                 </div>
             </div>
         </div>
@@ -86,6 +96,10 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 <script src="/js/script.js"></script>
 <script>
+    if(window.sessionStorage.actor == "1") {
+        $('.admin-panel').css('display','block');
+      };
+
     $('input[type="file"]').on('change', function(e) {
         e.preventDefault;
       var fd = new FormData();
@@ -130,14 +144,18 @@
         var imageName = $("#image-name").val();
         var date = $("#date").val();
         var time = $("#screeningTime").val();
+        var auditorium = $("#auditorium").val();
+
+        (parseInt(duration) == NaN)? duration = 0 : duration = parseInt(duration) ;
 
         let podaci = {
           title : title,
           description : description,
-          duration : parseInt(duration),
+          duration : duration,
           image : imageName,
           date : date,
-          time : time
+          time : time,
+          auditorium : auditorium
         };
 
         $.ajax({
@@ -173,9 +191,12 @@
 
                   $('.errors').html(temp).show();
                   break;
-                case 409:
-                  alert(status);
+                case 400:
+                  alert("Date is requried");
                   break;  
+                case 409:
+                  alert("Date cannot be in past");
+                  break; 
                 default:  
                   alert("Application is not currently working. Please come back later");
                   break;
