--- a/MoviePlus Front/registration.html
+++ b/MoviePlus Front/registration.html
@@ -76,7 +76,7 @@
 
         $.ajax({
             method: "POST",
-            url: "http://localhost:5101/api/user",
+            url: "http://localhost:5101/api/register",
             //Mora da se definise contentType kako bi server podrzao JSON 
             contentType: 'application/json',
             dataType: "json",
