--- a/MoviePlus Front/insertScreening.html
+++ b/MoviePlus Front/insertScreening.html
@@ -55,6 +55,8 @@
                         <select class="form-control" id="auditorium">
                           <option value="1" selected>Auditorium 1</option>
                           <option value="2">Auditorium 2</option>
+                          <option value="3">Auditorium 3</option>
+                          <option value="4">Auditorium 4</option>
                         </select>                                         
                     </div>
                     <div class="form-group">
